Convert POST response to type union for backwards compatability
